Fixed display issue on ie

--- a/css/home.css
+++ b/css/home.css
@@ -58,7 +58,7 @@ iframe {
 ul.details {
   list-style-type: none;
   padding: 0px;
-  max-height: 650px;
+  height: 650px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -67,26 +67,26 @@ ul.details {
 
 @media only screen and (max-width: 1100px) {
     ul.details {
-        max-height: 850px;
+        height: 850px;
     }
   }
 
   @media only screen and (max-width: 1050px) {
     ul.details {
-        max-height: 1050px;
+        height: 1050px;
     }
   }
 
   @media only screen and (max-width: 840px) {
     ul.details {
-        max-height: 1200px;
+        height: 1200px;
     }
   }
 
   @media only screen and (max-width: 840px) {
     ul.details {
        flex-wrap: nowrap;
-       max-height: none;
+       height: 1850px;
     }
   }
 
